CHANGES
=======

0.15.2 (Unreleased)
-------------------

- Flow control subsystem refactoring

- Allow to match any request method with `*`

- Explicitly call drain on transport #316


0.15.1 (03-31-2015)
-------------------

- Pass Autobahn Testsuit tests

- Fixed websocket fragmentation

- Fixed websocket close procedure

- Fixed parser buffer limits

- Added `timeout` parameter to WebSocketResponse ctor

- Added `WebSocketResponse.close_code` attribute


0.15.0 (03-27-2015)
-------------------

- Client WebSockets support

- New Multipart system #273

- Support for "Except" header #287 #267

- Set default Content-Type for post requests #184

- Fix issue with construction dynamic route with regexps and trailing slash #266

- Add repr to web.Request

- Add repr to web.Response

- Add repr for NotFound and NotAllowed match infos

- Add repr for web.Application

- Add repr to UrlMappingMatchInfo #217

- Gunicorn 19.2.x compatibility