@@ -3,3 +3,4 @@ nose
 coverage
 sphinx
 alabaster>=0.6.2
+cython
