@@ -53,12 +53,12 @@ with codecs.open(os.path.join(os.path.abspath(os.path.dirname(
         raise RuntimeError('Unable to determine version.')
 
 
-if sys.version_info >= (3, 4):
-    install_requires = []
-else:
-    install_requires = ['asyncio']
+install_requires = ['chardet']
 
-tests_require = install_requires + ['nose', 'gunicorn', 'chardet']
+if sys.version_info < (3, 4):
+    install_requires += ['asyncio']
+
+tests_require = install_requires + ['nose', 'gunicorn']
 
 
 def read(f):
